# aoc23_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: readme-stars.yml
data/examples/: 23.txt
data/puzzles/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  11.md  12.md  13.md  14.md  16.md  18.md  21.md
src/: day.rs  main.rs
src/template/: mod.rs  readme_benchmarks.rs
src/template/commands/: scaffold.rs
