[package]
name = "aoc23_rust"
version = "0.1.0"
authors = ["Dale Robson <1682504+djrobso@users.noreply.github.com>"]
edition = "2021"
default-run = "aoc23_rust"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
