[package]
name = "aoc23_rust"
version = "0.1.0"
authors = ["Dale Robson <1682504+djrobso@users.noreply.github.com>"]
edition = "2021"
default-run = "aoc23_rust"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
glam = "0.25.0"
itertools = "0.12.0"
lcmx = "0.1.3"
memoize = "0.4.1"
petgraph = "0.6.4"
pico-args = "0.5.0"
rayon = "1.8.0"
rstest = "0.18.2"
rustworkx-core = "0.13.2"
